temp/main/default/objects/Case/fields/Field1__c.field-meta.xml
<CustomField>
    <fullName>Field1__c</fullName>
    <label>サブタイプ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>外国株</fullName>
            </value>
            <value>
                <fullName>日本株</fullName>
            </value>
            <value>
                <fullName>米国債券</fullName>
            </value>
            <value>
                <fullName>日本債券</fullName>
            </value>
            <value>
                <fullName>モーゲージ債券</fullName>
            </value>
            <value>
                <fullName>デリバティブ</fullName>
            </value>
            <value>
                <fullName>為替</fullName>
            </value>
            <value>
                <fullName>OTC商品</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>