temp/main/default/objects/Case/recordTypes/Billing_Inquiry.recordType-meta.xml
<RecordType>
    <fullName>Billing_Inquiry</fullName>
    <active>true</active>
    <businessProcess>Billing Process</businessProcess>
    <description>Customer billing questions.</description>
    <label>Billing Inquiry</label>
</RecordType>