temp/main/default/objects/Case/recordTypes/General_Inquiry.recordType-meta.xml
<RecordType>
    <fullName>General_Inquiry</fullName>
    <active>true</active>
    <businessProcess>General Inquiry</businessProcess>
    <description>General customer questions and inquiry</description>
    <label>General Inquiry</label>
</RecordType>