temp/main/default/objects/Case/listViews/Service_AMER_BPC_Case.listView-meta.xml
<ListView>
    <fullName>Service_AMER_BPC_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Service :(AMER)*BPC</label>
    <queue>Service_AMER_BPC</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>