temp/main/default/objects/Case/listViews/Service_EMEA_BPC_Case.listView-meta.xml
<ListView>
    <fullName>Service_EMEA_BPC_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Service :(EMEA)*BPC</label>
    <queue>Service_EMEA_BPC</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>